[gd_scene load_steps=99 format=2]

[ext_resource path="res://Area_Objects/Visibility.tscn" type="PackedScene" id=1]
[ext_resource path="res://Soldiers/Soldier.gd" type="Script" id=2]
[ext_resource path="res://Area_Objects/Selectable.tscn" type="PackedScene" id=3]
[ext_resource path="res://Area_Objects/Scan_Area.tscn" type="PackedScene" id=4]
[ext_resource path="res://Soldiers/Swordsman_Sprites/IDLE/Front/2.png" type="Texture" id=5]
[ext_resource path="res://Soldiers/Swordsman_Sprites/IDLE/Front/5.png" type="Texture" id=6]
[ext_resource path="res://Soldiers/Swordsman_Sprites/IDLE/Front/1.png" type="Texture" id=7]
[ext_resource path="res://Soldiers/Swordsman_Sprites/IDLE/Front/7.png" type="Texture" id=8]
[ext_resource path="res://Soldiers/Swordsman_Sprites/IDLE/Front/14.png" type="Texture" id=9]
[ext_resource path="res://Soldiers/Swordsman_Sprites/IDLE/Front/15.png" type="Texture" id=10]
[ext_resource path="res://Soldiers/Swordsman_Sprites/IDLE/Front/6.png" type="Texture" id=11]
[ext_resource path="res://Soldiers/Swordsman_Sprites/IDLE/Front/9.png" type="Texture" id=12]
[ext_resource path="res://Soldiers/Swordsman_Sprites/IDLE/Front/8.png" type="Texture" id=13]
[ext_resource path="res://Soldiers/Swordsman_Sprites/IDLE/Front/11.png" type="Texture" id=14]
[ext_resource path="res://Soldiers/Swordsman_Sprites/IDLE/Front/13.png" type="Texture" id=15]
[ext_resource path="res://Soldiers/Swordsman_Sprites/IDLE/Front/10.png" type="Texture" id=16]
[ext_resource path="res://Soldiers/Swordsman_Sprites/IDLE/Front/4.png" type="Texture" id=17]
[ext_resource path="res://Soldiers/Swordsman_Sprites/IDLE/Front/12.png" type="Texture" id=18]
[ext_resource path="res://Soldiers/Swordsman_Sprites/IDLE/Left/12.png" type="Texture" id=19]
[ext_resource path="res://Soldiers/Swordsman_Sprites/IDLE/Front/3.png" type="Texture" id=20]
[ext_resource path="res://Soldiers/Swordsman_Sprites/IDLE/Back/9.png" type="Texture" id=21]
[ext_resource path="res://Soldiers/Swordsman_Sprites/IDLE/Right/14.png" type="Texture" id=22]
[ext_resource path="res://Soldiers/Swordsman_Sprites/IDLE/Right/7.png" type="Texture" id=23]
[ext_resource path="res://Soldiers/Swordsman_Sprites/IDLE/Right/6.png" type="Texture" id=24]
[ext_resource path="res://Soldiers/Swordsman_Sprites/IDLE/Left/7.png" type="Texture" id=25]
[ext_resource path="res://Soldiers/Swordsman_Sprites/IDLE/Left/4.png" type="Texture" id=26]
[ext_resource path="res://Soldiers/Swordsman_Sprites/IDLE/Left/6.png" type="Texture" id=27]
[ext_resource path="res://Soldiers/Swordsman_Sprites/IDLE/Right/9.png" type="Texture" id=28]
[ext_resource path="res://Soldiers/Swordsman_Sprites/IDLE/Right/4.png" type="Texture" id=29]
[ext_resource path="res://Soldiers/Swordsman_Sprites/IDLE/Left/10.png" type="Texture" id=30]
[ext_resource path="res://Soldiers/Swordsman_Sprites/IDLE/Back/13.png" type="Texture" id=31]
[ext_resource path="res://Soldiers/Swordsman_Sprites/IDLE/Right/2.png" type="Texture" id=32]
[ext_resource path="res://Soldiers/Swordsman_Sprites/IDLE/Left/13.png" type="Texture" id=33]
[ext_resource path="res://Soldiers/Swordsman_Sprites/IDLE/Right/3.png" type="Texture" id=34]
[ext_resource path="res://Soldiers/Swordsman_Sprites/IDLE/Right/15.png" type="Texture" id=35]
[ext_resource path="res://Soldiers/Swordsman_Sprites/IDLE/Right/5.png" type="Texture" id=36]
[ext_resource path="res://Soldiers/Swordsman_Sprites/IDLE/Left/1.png" type="Texture" id=37]
[ext_resource path="res://Soldiers/Swordsman_Sprites/IDLE/Right/11.png" type="Texture" id=38]
[ext_resource path="res://Soldiers/Swordsman_Sprites/IDLE/Back/14.png" type="Texture" id=39]
[ext_resource path="res://Soldiers/Swordsman_Sprites/IDLE/Left/8.png" type="Texture" id=40]
[ext_resource path="res://Soldiers/Swordsman_Sprites/IDLE/Back/3.png" type="Texture" id=41]
[ext_resource path="res://Soldiers/Swordsman_Sprites/IDLE/Back/7.png" type="Texture" id=42]
[ext_resource path="res://Soldiers/Swordsman_Sprites/IDLE/Right/13.png" type="Texture" id=43]
[ext_resource path="res://Soldiers/Swordsman_Sprites/IDLE/Left/2.png" type="Texture" id=44]
[ext_resource path="res://Soldiers/Swordsman_Sprites/IDLE/Back/10.png" type="Texture" id=45]
[ext_resource path="res://Soldiers/Swordsman_Sprites/IDLE/Right/12.png" type="Texture" id=46]
[ext_resource path="res://Soldiers/Swordsman_Sprites/IDLE/Right/8.png" type="Texture" id=47]
[ext_resource path="res://Soldiers/Swordsman_Sprites/IDLE/Back/6.png" type="Texture" id=48]
[ext_resource path="res://Soldiers/Swordsman_Sprites/IDLE/Left/14.png" type="Texture" id=49]
[ext_resource path="res://Soldiers/Swordsman_Sprites/IDLE/Right/10.png" type="Texture" id=50]
[ext_resource path="res://Soldiers/Swordsman_Sprites/IDLE/Back/8.png" type="Texture" id=51]
[ext_resource path="res://Soldiers/Swordsman_Sprites/IDLE/Back/11.png" type="Texture" id=52]
[ext_resource path="res://Soldiers/Swordsman_Sprites/IDLE/Left/15.png" type="Texture" id=53]
[ext_resource path="res://Soldiers/Swordsman_Sprites/IDLE/Back/5.png" type="Texture" id=54]
[ext_resource path="res://Soldiers/Swordsman_Sprites/IDLE/Left/11.png" type="Texture" id=55]
[ext_resource path="res://Soldiers/Swordsman_Sprites/IDLE/Back/2.png" type="Texture" id=56]
[ext_resource path="res://Soldiers/Swordsman_Sprites/IDLE/Back/4.png" type="Texture" id=57]
[ext_resource path="res://Soldiers/Swordsman_Sprites/IDLE/Back/1.png" type="Texture" id=58]
[ext_resource path="res://Soldiers/Swordsman_Sprites/IDLE/Back/15.png" type="Texture" id=59]
[ext_resource path="res://Soldiers/Swordsman_Sprites/IDLE/Left/9.png" type="Texture" id=60]
[ext_resource path="res://Soldiers/Swordsman_Sprites/IDLE/Left/5.png" type="Texture" id=61]
[ext_resource path="res://Soldiers/Swordsman_Sprites/IDLE/Left/3.png" type="Texture" id=62]
[ext_resource path="res://Soldiers/Swordsman_Sprites/IDLE/Back/12.png" type="Texture" id=63]
[ext_resource path="res://Soldiers/Swordsman_Sprites/IDLE/Right/1.png" type="Texture" id=64]
[ext_resource path="res://Soldiers/Swordsman_Sprites/WALK/front/4.png" type="Texture" id=65]
[ext_resource path="res://Soldiers/Swordsman_Sprites/WALK/side/1.png" type="Texture" id=66]
[ext_resource path="res://Soldiers/Swordsman_Sprites/WALK/side/2.png" type="Texture" id=67]
[ext_resource path="res://Soldiers/Swordsman_Sprites/WALK/front/1.png" type="Texture" id=68]
[ext_resource path="res://Soldiers/Swordsman_Sprites/WALK/back/4.png" type="Texture" id=69]
[ext_resource path="res://Soldiers/Swordsman_Sprites/WALK/side/3.png" type="Texture" id=70]
[ext_resource path="res://Soldiers/Swordsman_Sprites/WALK/back/2.png" type="Texture" id=71]
[ext_resource path="res://Soldiers/Swordsman_Sprites/WALK/side/4.png" type="Texture" id=72]
[ext_resource path="res://Soldiers/Swordsman_Sprites/WALK/back/1.png" type="Texture" id=73]
[ext_resource path="res://Soldiers/Swordsman_Sprites/WALK/front/3.png" type="Texture" id=74]
[ext_resource path="res://Soldiers/Swordsman_Sprites/WALK/back/3.png" type="Texture" id=75]
[ext_resource path="res://Soldiers/Swordsman_Sprites/WALK/front/2.png" type="Texture" id=76]

[sub_resource type="CapsuleShape2D" id=1]
radius = 4.15139
height = 6.51096

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 64 ), ExtResource( 32 ), ExtResource( 34 ), ExtResource( 29 ), ExtResource( 36 ), ExtResource( 24 ), ExtResource( 23 ), ExtResource( 47 ), ExtResource( 28 ), ExtResource( 50 ), ExtResource( 38 ), ExtResource( 46 ), ExtResource( 43 ), ExtResource( 22 ), ExtResource( 35 ), ExtResource( 43 ), ExtResource( 38 ), ExtResource( 46 ), ExtResource( 50 ), ExtResource( 28 ), ExtResource( 47 ), ExtResource( 23 ), ExtResource( 36 ), ExtResource( 24 ), ExtResource( 29 ), ExtResource( 34 ), ExtResource( 32 ), ExtResource( 64 ) ],
"loop": false,
"name": "idle_right",
"speed": 10.0
}, {
"frames": [ ExtResource( 41 ), ExtResource( 56 ), ExtResource( 57 ), ExtResource( 54 ), ExtResource( 48 ), ExtResource( 42 ), ExtResource( 51 ), ExtResource( 21 ), ExtResource( 58 ), ExtResource( 45 ), ExtResource( 52 ), ExtResource( 63 ), ExtResource( 31 ), ExtResource( 39 ), ExtResource( 59 ), ExtResource( 31 ), ExtResource( 52 ), ExtResource( 63 ), ExtResource( 45 ), ExtResource( 21 ), ExtResource( 51 ), ExtResource( 54 ), ExtResource( 48 ), ExtResource( 57 ), ExtResource( 42 ), ExtResource( 41 ), ExtResource( 56 ), ExtResource( 58 ) ],
"loop": false,
"name": "idle_back",
"speed": 10.0
}, {
"frames": [ ExtResource( 73 ), ExtResource( 71 ), ExtResource( 75 ), ExtResource( 69 ) ],
"loop": true,
"name": "run_back",
"speed": 10.0
}, {
"frames": [ ExtResource( 37 ), ExtResource( 44 ), ExtResource( 62 ), ExtResource( 26 ), ExtResource( 61 ), ExtResource( 27 ), ExtResource( 25 ), ExtResource( 40 ), ExtResource( 60 ), ExtResource( 30 ), ExtResource( 55 ), ExtResource( 19 ), ExtResource( 33 ), ExtResource( 49 ), ExtResource( 53 ), ExtResource( 33 ), ExtResource( 19 ), ExtResource( 30 ), ExtResource( 55 ), ExtResource( 60 ), ExtResource( 40 ), ExtResource( 25 ), ExtResource( 27 ), ExtResource( 26 ), ExtResource( 61 ), ExtResource( 62 ), ExtResource( 44 ), ExtResource( 37 ) ],
"loop": false,
"name": "idle_left",
"speed": 10.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 5 ), ExtResource( 20 ), ExtResource( 17 ), ExtResource( 6 ), ExtResource( 11 ), ExtResource( 8 ), ExtResource( 13 ), ExtResource( 12 ), ExtResource( 16 ), ExtResource( 14 ), ExtResource( 18 ), ExtResource( 15 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 14 ), ExtResource( 18 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 8 ), ExtResource( 6 ), ExtResource( 11 ), ExtResource( 17 ), ExtResource( 20 ), ExtResource( 5 ), ExtResource( 7 ) ],
"loop": false,
"name": "idle_front",
"speed": 10.0
}, {
"frames": [ ExtResource( 66 ), ExtResource( 67 ), ExtResource( 70 ), ExtResource( 72 ) ],
"loop": true,
"name": "run_left",
"speed": 10.0
}, {
"frames": [ ExtResource( 66 ), ExtResource( 67 ), ExtResource( 70 ), ExtResource( 72 ) ],
"loop": true,
"name": "run_right",
"speed": 10.0
}, {
"frames": [ ExtResource( 68 ), ExtResource( 76 ), ExtResource( 74 ), ExtResource( 65 ) ],
"loop": true,
"name": "run_front",
"speed": 10.0
} ]

[sub_resource type="AnimationNodeAnimation" id=3]
animation = "Idle_Left"

[sub_resource type="AnimationNodeAnimation" id=4]
animation = "Idle_Right"

[sub_resource type="AnimationNodeAnimation" id=5]
animation = "Idle_Front"

[sub_resource type="AnimationNodeAnimation" id=6]
animation = "Idle_Back"

[sub_resource type="AnimationNodeBlendSpace2D" id=7]
blend_point_0/node = SubResource( 3 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 4 )
blend_point_1/pos = Vector2( 1, 0 )
blend_point_2/node = SubResource( 5 )
blend_point_2/pos = Vector2( 0, 1 )
blend_point_3/node = SubResource( 6 )
blend_point_3/pos = Vector2( 0, -1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=8]
animation = "Walk_Left"

[sub_resource type="AnimationNodeAnimation" id=9]
animation = "Walk_Front"

[sub_resource type="AnimationNodeAnimation" id=10]
animation = "Walk_Right"

[sub_resource type="AnimationNodeAnimation" id=11]
animation = "Walk_Front"

[sub_resource type="AnimationNodeBlendSpace2D" id=12]
blend_point_0/node = SubResource( 8 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 9 )
blend_point_1/pos = Vector2( 0, -1 )
blend_point_2/node = SubResource( 10 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 11 )
blend_point_3/pos = Vector2( 0, 1 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachine" id=13]
states/Idle/node = SubResource( 7 )
states/Idle/position = Vector2( 452, 137 )
states/Walk/node = SubResource( 12 )
states/Walk/position = Vector2( 711, 137 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=14]

[sub_resource type="Animation" id=15]
length = 2.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4, 2.5, 2.6, 2.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27 ]
}

[sub_resource type="Animation" id=16]
length = 2.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4, 2.5, 2.6, 2.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27 ]
}

[sub_resource type="Animation" id=17]
length = 2.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4, 2.5, 2.6, 2.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27 ]
}

[sub_resource type="Animation" id=18]
length = 2.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4, 2.5, 2.6, 2.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27 ]
}

[sub_resource type="Animation" id=19]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=20]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=21]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=22]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[node name="Soldier" type="KinematicBody2D"]
position = Vector2( -0.17886, 0.333916 )
scale = Vector2( 0.7, 0.7 )
collision_layer = 256
collision_mask = 256
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}
team_no = 2

[node name="World_Collider" type="CollisionShape2D" parent="."]
position = Vector2( 0.314667, 18.1426 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="Soldier_Scan" parent="." instance=ExtResource( 4 )]
collision_mask = 20

[node name="Sprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.1, 0.1 )
frames = SubResource( 2 )
animation = "idle_back"

[node name="Timer" type="Timer" parent="."]

[node name="Attack_Speed" type="Timer" parent="."]

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 13 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 14 )
parameters/Idle/blend_position = Vector2( 0, 0 )
parameters/Walk/blend_position = Vector2( 0.266019, 0.0605428 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Idle_Back = SubResource( 15 )
anims/Idle_Front = SubResource( 16 )
anims/Idle_Left = SubResource( 17 )
anims/Idle_Right = SubResource( 18 )
anims/Walk_Back = SubResource( 19 )
anims/Walk_Front = SubResource( 20 )
anims/Walk_Left = SubResource( 21 )
anims/Walk_Right = SubResource( 22 )

[node name="Combat" parent="." instance=ExtResource( 1 )]
collision_layer = 8
collision_mask = 8

[node name="CollisionPolygon2D" parent="Combat" index="0"]
position = Vector2( -0.247499, 7.58775 )
scale = Vector2( 2.78334, 2.99268 )
polygon = PoolVector2Array( -3.96121, 4.36575, -2.99267, 6.73328, 0.181976, 6.57186, 2.97997, 6.30282, 4.10993, 4.41955, 4.76861, 3.35289, 3.73328, 1.99821, 3.1414, 0.545403, 0.181976, -0.423136, -2.56221, 0.706825, -3.36933, 2.48248 )

[node name="Selectable" parent="." instance=ExtResource( 3 )]

[node name="CollisionPolygon2D" parent="Selectable" index="0"]
polygon = PoolVector2Array( -1.60411, 19.1562, -3.59272, 0.622363, -6.05861, 12.3154, -5.97906, -2.63896, -0.808666, -9.00252, 4.12309, -6.37755, 7.06624, 2.53143, 6.98669, 12.1563, 5.15717, 0.0655503, 1.57767, 18.1222, 0.0663216, 9.84953, -1.12684, 17.5653 )

[node name="Visibility" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 2147483648

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Visibility"]
position = Vector2( 0, -2.82793 )
scale = Vector2( 1, 1.26457 )
polygon = PoolVector2Array( -5.317, 20.7111, 8.39926, 20.5219, 12.5141, 16.1705, 5.7506, 13.0962, -5.50619, 13.0016, -12.317, 17.826 )
[connection signal="area_entered" from="Soldier_Scan" to="." method="_on_Soldier_Scan_area_entered"]
[connection signal="area_exited" from="Soldier_Scan" to="." method="_on_Soldier_Scan_area_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Attack_Speed" to="." method="_on_Attack_Speed_timeout"]
[connection signal="area_entered" from="Combat" to="." method="_on_Combat_area_entered"]
[connection signal="area_exited" from="Combat" to="." method="_on_Combat_area_exited"]

[editable path="Soldier_Scan"]

[editable path="Combat"]

[editable path="Selectable"]
